--- a/build.yaml
+++ b/build.yaml
@@ -22,4 +22,4 @@ include:
   - board: nice_nano_v2
     shield: temper_left nice_view
   - board: nice_nano_v2
-    shield: temoer_right nice_view
+    shield: temper_right nice_view
