Add deep sleep support

--- a/config/temper_right.conf
+++ b/config/temper_right.conf
@@ -9,3 +9,6 @@ CONFIG_BT=y
 CONFIG_ZMK_DISPLAY=y
 # Enable Pointing Device support for mouse emulation
 CONFIG_ZMK_POINTING=y
+
+# Enable Deep Sleep
+CONFIG_ZMK_DEEP_SLEEP=y
