--- a/config/temper_left.conf
+++ b/config/temper_left.conf
@@ -15,3 +15,6 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_BT_MAX_CONN=6
 CONFIG_BT_MAX_PAIRED=6
+
+# Enable Deep Sleep
+CONFIG_ZMK_DEEP_SLEEP=y
